--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,8 @@
             showLoader(true);
 
             try {
-                const response = await fetch('http://127.0.0.1:5000/get_response', {
+                const response = await 
+               fetch('/get_response', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ history: conversationHistory })
